# Copyright (c) 2022 by Apex.AI Inc. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("@buildifier_prebuilt//:rules.bzl", "buildifier")

exports_files(["LICENSE"])

exports_files(["VERSION"])

alias(
    name = "iceoryx_hoofs",
    actual = "//iceoryx_hoofs",
    visibility = ["//visibility:public"],
)

alias(
    name = "iceoryx_posh",
    actual = "//iceoryx_posh",
    visibility = ["//visibility:public"],
)

alias(
    name = "iceoryx_binding_c",
    actual = "//iceoryx_binding_c",
    visibility = ["//visibility:public"],
)

alias(
    name = "roudi",
    actual = "//iceoryx_posh:iox-roudi",
    visibility = ["//visibility:public"],
)

# Execute `bazel run //:buildifier` to fix formating of all starlark files in the workspace
buildifier(
    name = "buildifier",
    verbose = True,
)

# Execute `bazel run //:buildifier_test` to check all starlark files for correctness
buildifier(
    name = "buildifier_test",
    mode = "check",
    verbose = True,
)

# Execute `bazel run //:buildifier_lint` to reformat and run the linter on all starlark files
buildifier(
    name = "buildifier_lint",
    lint_mode = "fix",
    lint_warnings = ["all"],
    verbose = True,
)

# Execute `bazel run //:buildifier_lint_check` to reformat and run the linter on all starlark files
buildifier(
    name = "buildifier_lint_check",
    lint_mode = "warn",
    lint_warnings = ["all"],
    mode = "check",
    verbose = True,
)
