# Copyright (c) 2022 by Apex.AI Inc. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

exports_files(["LICENSE"])

exports_files(["VERSION"])

# values: auto, on, off
string_flag(
    name = "feature_acl",
    build_setting_default = "auto",
    visibility = ["//visibility:public"],
)

alias(
    name = "iceoryx",
    actual = "//:iceoryx_binding_c",
    visibility = ["//visibility:public"],
)

alias(
    name = "iceoryx_hoofs",
    actual = "//iceoryx_hoofs",
    visibility = ["//visibility:public"],
)

alias(
    name = "iceoryx_posh",
    actual = "//iceoryx_posh",
    visibility = ["//visibility:public"],
)

alias(
    name = "iceoryx_binding_c",
    actual = "//iceoryx_binding_c",
    visibility = ["//visibility:public"],
)

alias(
    name = "roudi",
    actual = "//iceoryx_posh:iox-roudi",
    visibility = ["//visibility:public"],
)
