module(
    name = "org_eclipse_iceoryx",
    version = "2.95.4",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "cpptoml", version = "0.1.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_cc", version = "0.0.9")

bazel_dep(
    name = "buildifier_prebuilt",
    version = "7.1.2",
    dev_dependency = True,
)
bazel_dep(name = "googletest", version = "1.15.2", dev_dependency = True)

bazel_dep(name = "ncurses", version = "6.4.20221231")
