<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpptoml_vendor</name>
  <version>0.99.1</version>  <!-- used cpptoml version is v0.1.1 -->
  <description>
    Wrapper around cpptoml for parsing TOML configuration files , build is done via a CMake ExternalProject.
  </description>
  <maintainer email="michael.poehnl@apex.ai">Eclipse Foundation, Inc.</maintainer>
  <license>Apache License 2.0</license>  <!-- the contents of this package are Apache 2.0 -->
  <license>MIT</license>  <!-- cpptoml is MIT -->

  <url type="website">https://github.com/skystrife/cpptoml</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

</package>
