# Copyright (c) 2022 by Apex.AI Inc. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:configure_file.bzl", "configure_file")

configure_file(
    name = "iceoryx_dust_deployment_hpp",
    src = "cmake/iceoryx_dust_deployment.hpp.in",
    out = "include/iceoryx_dust/iceoryx_dust_deployment.hpp",
    config = {
        "IOX_MAX_NAMED_PIPE_MESSAGE_SIZE": "4096",
        "IOX_MAX_NAMED_PIPE_NUMBER_OF_MESSAGES": "10",
    },
)

cc_library(
    name = "iceoryx_dust",
    srcs = glob([
        "source/**/*.cpp",
        "source/**/*.hpp",
    ]),
    hdrs = glob(["include/**"] + glob(["vocabulary/**"])) + [,
        ":iceoryx_dust_deployment_hpp",
    ],
    includes = [
        "include",
        "vocabulary/include/",
    ],
    visibility = ["//visibility:public"],
    deps = ["//iceoryx_hoofs"],
)
