<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>iceoryx_dust</name>
    <version>2.90.0</version>
    <description>Eclipse iceoryx inter-process-communication (IPC) middleware deemed usefule software thingies</description>
    <maintainer email="iceoryx-oss-support@apex.ai">Eclipse Foundation, Inc.</maintainer>
    <license>Apache 2.0</license>
    <url type="website">https://iceoryx.io</url>
    <url type="bugtracker">https://github.com/eclipse-iceoryx/iceoryx/issues</url>
    <url type="repository">https://github.com/eclipse-iceoryx/iceoryx</url>

    <buildtool_depend>cmake</buildtool_depend>

    <depend>acl</depend>
    <depend>libatomic</depend>
    <depend>iceoryx_hoofs</depend>


    <doc_depend>doxygen</doc_depend>

    <export>
        <build_type>cmake</build_type>
    </export>
</package>
